k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
  namespace: todo
  labels:
    app: todo
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - name: http
      port: 80
      targetPort: http
